part1/project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      containers:
        - name: project
          image: snottis/project:v0.3
          imagePullPolicy: Always
